Fixed slide jump when content will fit. Shortened easing.

--- a/site.less
+++ b/site.less
@@ -261,7 +261,7 @@ body {
     bottom: 0;
     left: 0;
     right: -17px;  // hide scrollbar
-    overflow-y: auto;
+    overflow-y: scroll;
     //background-color: lightpink;
     padding: 20px 0;
     z-index: 30;
@@ -273,7 +273,7 @@ body {
 
     .overlay {
         margin: 100% auto 0;
-        transition: margin-top 0.5s ease;
+        transition: margin-top 0.4s ease;
         width: 820px;
         padding: 70px;
         box-sizing: border-box;
